@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST exo-2.tar.xz 914800 SHA256 e3f358f5cde237f0cb8cd74782bbe5019881312965f318ac18c1188b2d150603 SHA512 362f2391563f2e5684c8c0bd7ecec8bd4834758c901e38ddfde7eeb53c573529f197b8cefe7da48ae23de564b8967c03c27e32266649cd429ee5b5187fda16ca WHIRLPOOL db3a251d7ecb840897f43aafa5e6103baf90898708ffcadc715e40954404a10ddd03e9734986380c08402cfa6d00485ac3fa5d1333f7b98d8307dc16b0e6bed0
+EBUILD exo-2.ebuild 566 SHA256 97d4a94242d347a4f41b0bf0eef4f12aa499f0d2f49bb33eaca40f515a325429 SHA512 d79c191ed6d9c76a131d3a16be13b5863c13acf43db392fc1b4f0671fa2769d47fe587c5e50c9eb38f9ae38c397d42d7e2154f8a8bac600c99d871e2c571c1e6 WHIRLPOOL c1541626c055e426d2bae30fd4766f4cbc1fde03a0bd8de45cdf6450e9c7030ec262edc4b1480ef38bc228749672faeccf631ad032745b1e74f9a139f440eeda
+MISC ChangeLog 320 SHA256 13f470c546d78b376e277afd5712e3167ad2ff57f18e93ed77f4225e0c98151c SHA512 6b7c713bcc8c0427c6d67cdac5219617b2acad33d918a228317755bbfb583cedaf49b2db0dc648c4289036f2a8794a488c1661b3277c519dbcddc31cdcad40a2 WHIRLPOOL da55bfd264b42aa24a3bc46fa9a28ddfe7bb29d9e66bed023d9ca1e03cf6b95ec5fd2334b2a56381a6c86b7f242b54d2d2fc5bff1e4e27ebbb5bd93e9434172f
+MISC metadata.xml 160 SHA256 f98af670c6967591fe20a2cf4ef27d68f8b6dfb2799f8a4cc051003f5c95f7c0 SHA512 309b994cd299c4e1e99212e9f531f63773f48b1255b1c5518f5f7c61f245045c579a7854b481c9b7ffdd79f7e71c417bfdd353ed6431903288a40e2e357b19ad WHIRLPOOL fc94ab822cf0a7455b83c600ee9333f3ad6a683f71bb17b33a21dc86d25dafa060192d7576a849668bb3f88b46f3ff7422a4d06830154bd33540a9f7a50bc1d8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJVF7EKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOTd4P/04ehpU1wfTB/TA8Xl9nZyny
+PNVQE1EdhPCGbc3k6BH8WoX4V6Uc9dh5JJQlSHd0WqRy8J85StJlKCPeM9z4niDK
++puXNQm1Aw+JukCKOjs3W0X2L3/78uf7p4oZGJowy0poRHka9emeyNRdUtsU1WoX
+hutXFBaW0OcpfQoJGEpAT31DFkCcBxa8+DfgGvQFMp704vbbEBeJxTVQNCxrbyE8
+GI8Udp12wmQdCOKEuQ4CiZNiDaYKlxDIlWUl2LE/LExUEfRndeDJe2fLggEk9rLd
+eHn0qniQC+VmxPtdiHzNDv2FwXyJwJ4Rszt2Om3EDTQAESu5VawaQVEr9iN25lEF
+k/j1d0JL0/nlaPqw9ETvZv4oeg/LP+9iS4gTW4S5LIGNnTvZIXmtIb9RzdUdh8K/
+MjN2LC70JSv+kCvdKkin7pHosSprw0ubiLnQIvt9Zk+6cNAIz//xvvCfj0PKBb40
+3jkUKQUtSQYHy8OQhRGIKDyc1va2N536UdN898y998c3Ss9zujSFW4oxc1EHXDyv
+7ZsiDwrkpnmaf0efQDQM/CGRmeadcwOfv/6DDLcsGVq3d0+IIPI2uzx0nZrypeU8
+Est/U3QoLD8L7PgJ4/VlXKFjBaefJ4d+MFZ6jLy6O6WA/6BYU0HBUUaOGCKtSdg4
+mpYktFLer4ZMMdOvxsxX
+=SS/p
+-----END PGP SIGNATURE-----
