@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST gidole-2.0.2.zip 141610 SHA256 37ed0b87cc4c892cfeba6f7f7b5e586852fe05ef930f47136f284b5f6f755293 SHA512 adc58657a4ea0331cda6261de293ab997c8d862fd23824f92860710e4a017267835d5c1fbfc6accace20ce172d5586d5f9568de08adf0266a07a191d9499e727 WHIRLPOOL d1086626a9f817d57937a8fc197227c2127616fb626f78b552562e8c2632ad4b76d874690f61ae74791f7b59be7a9cc83363ad0f5622755d690dbb70add2b589
+EBUILD gidole-2.0.2.ebuild 517 SHA256 e718c424a07afb36512700b74e743a5cc5ad0d8ab40eff39b9f0ec92207115df SHA512 15ccfb74fc706ba5057439681a79fd69c7d3b4c0e92d0f38ef7c5f31b9893d7f77e4c81f143b68d7bbb7848e25466a25136af7fbd9c2725d915ba4f5178d22fc WHIRLPOOL 356aa79972cd0151f49329ad96ade4b7b12c18e956887819bba576f72588a1f08ad2d01994c31ada03d80489c32678a0496997a696dac2793642e73be3988964
+MISC ChangeLog 342 SHA256 29708bb98ad80e7ff9c040fc742ef73dfce82bb48047ec7cf38e937984391acc SHA512 d4128e161f3e6a94504bc0893d0cc935348b86bf70a5376c3719522127d2f69e7f6fd85939f1b95ecb3539cbd2729b5d08081ecef027189fa2b50e11e5d737bd WHIRLPOOL afd7c54956206df48059caea39506fce59f844685b099c45f460ba754fe60dc66afea38a0ce74df152cf5ef9fdd30191d253276b436f0cf79dc2590a7c3d8b89
+MISC metadata.xml 160 SHA256 f98af670c6967591fe20a2cf4ef27d68f8b6dfb2799f8a4cc051003f5c95f7c0 SHA512 309b994cd299c4e1e99212e9f531f63773f48b1255b1c5518f5f7c61f245045c579a7854b481c9b7ffdd79f7e71c417bfdd353ed6431903288a40e2e357b19ad WHIRLPOOL fc94ab822cf0a7455b83c600ee9333f3ad6a683f71bb17b33a21dc86d25dafa060192d7576a849668bb3f88b46f3ff7422a4d06830154bd33540a9f7a50bc1d8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJVF6q0XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOqRQP/iwAGFaQ76Uj1xNFi1hipAoB
+EKDp1fUgELUryqSWRpnIJE1hXhh+Tft5yN6owmG/R986x2LgejJNNTRyGCYtlhlV
+sME6maXnGtikFJMx7Ah5C88jb5upw/F4hfCk9zKLwPaS+zjllgMmmlsUZYy0nuEl
+tPNQH2FTmGxK95fPM6zEq5YjffLru3NWh+DfKDFe9sewd4cLyk9e773Fa6orbN8A
+JhG2PcHrCNxEeo6V5HmYvqlNeDo2Ofwp08d9vhMTUuc8vR6E/d3LrwvsacvhFkWR
+iNe+KHodETwOq8TU5tN7b6fCT/QxT8l51LxD4rQI2eKcBGwYsChvbLoJBld3zWfS
+CRxCXqvIPt7EROM/3sDWdMoVZa3wQv22YvSPD6NuQNgfO169JrDOVOwJ8xZcAv1p
+tLR5K9sZMav3ca3PeK2ze+sC+u6WoblzTvp1IXgQKiabygumbv+N2gTF3Zgobefl
+v1ged3yWRTG5ODtuZEGlxTp0abHcLlQlFoDjhV2pZTwufQJSXyK8QowXPfzH4obK
+nbwhizZimMoOITnve2Flakv2VXpz5KvAE0omq6m3oLEpuB8kB7oRpGMkaZUHXo+t
+m9SxNRIpBJcdZglc3HRjjIqptcvuCIdOXe3OyMaNho374qAuWwYSM5QUt8VlVI99
+95liFV/wLaj3vx78iG+n
+=dy27
+-----END PGP SIGNATURE-----
