@@ -10,4 +10,4 @@ RDEPEND=>=dev-libs/libbson-1.0 sasl? ( dev-libs/cyrus-sasl ) ssl? ( dev-libs/ope
 SLOT=0
 SRC_URI=https://github.com/mongodb/mongo-c-driver/releases/download/1.1.2/mongo-c-driver-1.1.2.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=dfd8bec7ee556363504ac7c9244a7673
+_md5_=a8b2240bbe050671d287cc5a75fa6dc9
