@@ -1,0 +1,8 @@
+# ChangeLog for media-fonts/exo
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/exo/ChangeLog,v 1.1 2015/03/29 08:00:08 yngwin Exp $
+
+*exo-2 (29 Mar 2015)
+
+  29 Mar 2015; Ben de Groot <yngwin@gentoo.org> +exo-2.ebuild, +metadata.xml:
+  initial commit
