@@ -1,0 +1,9 @@
+# ChangeLog for media-fonts/gidole
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/gidole/ChangeLog,v 1.1 2015/03/29 07:33:06 yngwin Exp $
+
+*gidole-2.0.2 (29 Mar 2015)
+
+  29 Mar 2015; Ben de Groot <yngwin@gentoo.org> +gidole-2.0.2.ebuild,
+  +metadata.xml:
+  initial commit
