@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/mongo-c-driver
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/ChangeLog,v 1.19 2015/03/23 09:02:26 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/ChangeLog,v 1.20 2015/03/29 07:55:28 jer Exp $
+
+  29 Mar 2015; Jeroen Roovers <jer@gentoo.org> mongo-c-driver-1.1.2-r1.ebuild:
+  Ensure src/libbson is never even prepared.
 
 *mongo-c-driver-1.1.2-r1 (23 Mar 2015)
 
